members = [
    "imgui",
    "imgui-sys",
    "imgui-glium-renderer",
    "imgui-glow-renderer",
    "imgui-sdl2-support",
    "imgui-winit-support",
    "imgui-examples",
    "xtask",
]

[package]
name = "lolp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.winapi]
version = "0.3.8"
features = ["winuser", "processthreadsapi", "tlhelp32", "minwindef", "memoryapi", "uxtheme"]

[dependencies]
clipboard = "0.5"
rand = "0.8.5"
glium = { version = "0.31", default-features = true }
image = "0.23"
imgui = { path = "imgui", features = ["tables-api"] }
imgui-glium-renderer = { path = "imgui-glium-renderer" }
imgui-winit-support = { path = "imgui-winit-support" }
random-string = "1.0.0"
winconsole = "0.11.1"

